bug fixed dark mode button

--- a/style/style.scss
+++ b/style/style.scss
@@ -239,7 +239,7 @@ header {
 #arrow-up {
     position: fixed;
     bottom: 3.5%;
-    right: 3.5%;
+    right: 5%;
     z-index: 50;
     i {
         font-size: 3.5rem;
@@ -1092,6 +1092,11 @@ footer {
             &--input, &--textarea {
                 font-size: 1.5rem;
                 border: 1px solid var(--border-color);
+
+                &:focus {
+                    outline: none !important;
+                    border: 1px solid var(--pink-pure);
+                }
             }
             [type="submit"] {
                 font-size: 1.6rem;
